src/authorship/snapshots/git_ai__authorship__rebase_authorship__tests__in_order.snap
---
source: src/authorship/rebase_authorship.rs
expression: authorship_log
---
AuthorshipLogV3 {
    attestations: [],
    metadata: AuthorshipMetadata {
        schema_version: "authorship/3.1.0",
        base_commit_sha: "",
        prompts: {},
    },
}
